--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.103.0",
+    "@aws-cdk/aws-apigateway": "^1.108.1",
+    "@aws-cdk/aws-lambda": "^1.108.1",
+    "@types/aws-lambda": "^8.10.77",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.103.0",
+    "aws-lambda": "^1.0.6",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.103.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
